# atcf-data-parser

./: .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: codeql.yml  continuous-deployment.yaml  docs.yaml
atcf_data_parser/: __init__.py  cli.py
docs/: conf.py  index.md
tests/: test_get.py
tests/cassettes/: test_get_dataframe.yaml
tests/cassettes/test_get/: test_get_dataframe.yaml
